re-struct scheme prisma and controller
- avoid Bigint for prisma when use tsoa for api doc gen
- add /handlers folder to embed to controllers/ for clean
- rember run npx prisma generate when change prisma scheme
